# habits_project

./: .gitignore  .gitlab-ci.yml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/auth/: exceptions.py  router.py  schema.py  services.py  utils.py
app/core/: config.py  exceptions.py  responses.py  routers.py  schema.py  setup_app.py
app/database/: __init__.py  repository.py
app/database/alembic/: env.py
app/database/alembic/versions/: 2025-06-12_initial_schema.py  2025-06-13_initial.py  2025-06-13_remove_auth_fields.py  2025-06-17_add_cascade_delete_to_habit_instances.py  2025-06-17_initial_migration.py
app/habits/: crud.py  models.py  router.py  service.py  views.py
app/habits/schemas/: responses.py  schemas.py
app/profile/: models.py  router.py  schemas.py  service.py
apps/: main.py
apps/auth/: router.py  services.py  utils.py
apps/core/: config.py  error_handlers.py  routers.py  setup_app.py
apps/database/: __init__.py
apps/database/alembic/: env.py
apps/database/alembic/versions/: 2025-06-27_initial.py
apps/habits/: models.py  router.py  service.py  views.py
apps/profile/: models.py  router.py  schemas.py  service.py
infra/swarm/: portainer.yml
infra/swarm/dev/: statefull-stack.yml  web-stack.yml
